# Facultate

./: .gitignore
Anul 1/Sem 1/ASC/: .gitignore  CMakeLists.txt  Curs2.asm  Curs2.lst  Lucrare Seminar 1.docx  README.md  exercitiu.asm  exercitiu.lst  main.c
Anul 1/Sem 1/ASC/Exercitii test 2/: Probedy.asm  Probedy.lst  Problema 1.asm  Problema 1.lst  Problema 2.asm  Problema 2.lst  Problema 3.asm  Problema 3.lst  Test_asclab2.asm  Test_asclab2.lst
Anul 1/Sem 1/ASC/Exercitiu Practic/: main.c  modul1.asm  modul2.asm
Anul 1/Sem 1/ASC/Lab 6/: Lab6.asm  Lab6.lst  Lab6prob2.asm  Lab6prob2.lst
Anul 1/Sem 1/ASC/Lab10/: lab10main.c  lab10modul.asm
Anul 1/Sem 1/ASC/Lab3/: Lab3.asm  Lab3.lst  Lab3Prob2.asm
Anul 1/Sem 1/ASC/Lab5/: Lab5.asm  Lab5.lst  Lab5prob2.asm  Lab5prob2.lst
Anul 1/Sem 1/ASC/Lab7/: Lab7citire.asm  Lab7citire.lst  Lab7fisiere.asm  Lab7fisiere.lst  lab7+.asm  lab7+.lst
Anul 1/Sem 1/FP/: Documentatie lab 4-6 fp.docx  Documentatie lab3 fp.docx  README.md  lab3.py  sem2.py  seminar.py  seminar_sapt4.py
Anul 1/Sem 2/OOP/Lab3_5/: CMakeLists.txt  main.c
Anul 1/Sem 2/OOP/Lab3_5/domain/: participant.c  participant.h
Anul 1/Sem 2/OOP/Lab3_5/repo/: repo_participant.c  repo_participant.h
Anul 1/Sem 2/OOP/Lab3_5/service/: service_participant.c  service_participant.h
Anul 1/Sem 2/OOP/Lab3_5/teste/: teste_domain.c  teste_repo.c  teste_service.c
Anul 1/Sem 2/OOP/Lab3_5/ui/: ui.c  ui.h
Anul 1/Sem 2/SD/: lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab5-2.mw  lab5.mw  lab6.mw  sinteza_lab.mw
Anul 1/Sem 2/SDA/1Labsda/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Anul 1/Sem 2/SDA/2Labsda/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  TestScurt.cpp
Anul 1/Sem 2/SDA/3Labsda/: App.cpp  CMakeLists.txt  IteratorMD.cpp  IteratorMD.h  IteratorValori.cpp  IteratorValori.h  MD.cpp  MD.h  TestScurt.cpp
Anul 1/Sem 2/SDA/4Labsda/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  TestScurt.cpp
Anul 1/Sem 2/Sisteme de operare/: Comenzi.txt
(+386 files in other folders)
